--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,4 +1,5 @@
 @import '~@fortawesome/fontawesome-free/css/all.css';
+@import '~admin-lte/build/scss/adminlte.scss';
 
 body {
     background-color: #4a4643;
