--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,9 +12,9 @@
     <h1>Hello {{ controller_name }}! ✅</h1>
 
     This friendly message is coming from:
-    <ul>
+    <div class="d-flex flex-column">
         <li>Your controller at <code><a href="{{ 'D:/Bureau/symfony/nathan-personal-space/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'D:/Bureau/symfony/nathan-personal-space/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
+    </div>
 </div>
 {% endblock %}
