heroku mercure + demo chat

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,7 @@
                 <a href="#" class="nav-link">Home</a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a href="#" class="nav-link">Contact</a>
+                <a href="{{ path('chat_test') }}" class="nav-link">Chat</a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
                 <a href="{{ path('test') }}" class="nav-link">Test</a>
@@ -240,7 +240,7 @@
     </aside>
 
     <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper" style="min-height: 855px;">
+    <div class="content-wrapper">
         <!-- Content Header (Page header) -->
         <div class="content-header">
             <div class="container-fluid">
